<resources>
    <string name="app_name">Field Pro Customer</string>
    <string name="kaspon"> copyrights "" Kaspon Techworks Pvt Ltd 2019</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resetinstructions">We  just  need  your  registered  Email  id  to  send  you  password  reset  instructions.</string>
    <string name="registered_email_id">Enter Email Address</string>
    <string name="back_to_login_page">Back to login page</string>
    <string name="old_password">Old password</string>
    <string name="show">Show</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update_password">Update password</string>
    <string name="networkerror">Network connection failed</string>
    <string name="enablenet">Please enable your network connection</string>
    <string name="ok">Ok</string>
    <string name="oldpwderror">Old password field is required</string>
    <string name="newpwderror">New password field is required</string>
    <string name="confirmpwdvalid">Confirm new password field is required</string>
    <string name="matchvalid">Password does not match</string>
    <string name="product">Product</string>
    <string name="company">Company</string>
    <string name="alternative_contact_number">Alternative Contact Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="email_id">Email ID</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="customer_login">Customer Login</string>
    <string name="field">Field</string>
    <string name="pro">Pro</string>
    <string name="service">Service</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>


</resources>
