<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blur"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.capricot.fieldprocustomer.Registration">

    <include
        android:id="@+id/layout_satoff"
        layout="@layout/headinglayout" />

    <RelativeLayout
        android:id="@+id/white_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_satoff"
        android:gravity="center">

        <TextView
            android:id="@+id/forgotpwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/instructions_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotpwd_txt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/resetinstructions"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/regmailid_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructions_txt"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/registered_email_id"
            android:inputType="textEmailAddress"
            android:maxLength="32"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/black"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/resetpwd_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regmailid_txt"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_corner_label"
            android:text="@string/reset_password"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/backtologin_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resetpwd_btn"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/back_to_login_page"
            android:textColor="@android:color/black" />
    </RelativeLayout>


</RelativeLayout>
